Replace .php with .html & rename .php files to .html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ a.podlodka{text-decoration:underline}
 	<br/>
 
 	<p>Игры:</p>
-	<a href="ell/typing_game.php"><img src="ell/typing_game/files/images/logos/davilka_logo_wo_title.png" height="64" width="64" style='vertical-align:middle; margin: 10px;' alt='Давилка'/><br>
+	<a href="ell/typing_game.html"><img src="ell/typing_game/files/images/logos/davilka_logo_wo_title.png" height="64" width="64" style='vertical-align:middle; margin: 10px;' alt='Давилка'/><br>
 	Да<span style="color:green">в</span>илка 0.06b</a> 
 	<br/><br>
 	<a href="http://eeloka.ru/ell/space.html">Космическая игра 0.000001b</a>
