--- a/ell/test_stars/index.html
+++ b/ell/test_stars/index.html
@@ -154,7 +154,7 @@
 						<ul>
 						<li >
 						<a href="../../index.html">eeloka.ru</a>
-						<ul><li class=' '><a href='../../mine/index.html'>Майнинг</a></li><li class=' folder'><a href='../index.html'>cucumber's stuff</a><ul><li class=' '><a href='../typing_game.php'>Клавиатурный тренажер</a></li><li class=' '><a href='../mapgen/index.html'>Генератор карт</a></li><li class=' '><a href='../space/index.html'>Космическая игра 0.000001b</a></li><li class=' folder'><a href='../polygon/index.html'>Полигон</a></li><li class='active '><a href='index.html'>zillion stars</a></li></ul></li><li class=' folder'><a href='../../eu/index.html'>eu</a></li><li class=' folder'><a href='../../shared/index.html'>Shared</a></li><li class=' '><a href='../../policy.html'>Policy</a></li></ul>						</li></ul>
+						<ul><li class=' '><a href='../../mine/index.html'>Майнинг</a></li><li class=' folder'><a href='../index.html'>cucumber's stuff</a><ul><li class=' '><a href='../typing_game.html'>Клавиатурный тренажер</a></li><li class=' '><a href='../mapgen/index.html'>Генератор карт</a></li><li class=' '><a href='../space/index.html'>Космическая игра 0.000001b</a></li><li class=' folder'><a href='../polygon/index.html'>Полигон</a></li><li class='active '><a href='index.html'>zillion stars</a></li></ul></li><li class=' folder'><a href='../../eu/index.html'>eu</a></li><li class=' folder'><a href='../../shared/index.html'>Shared</a></li><li class=' '><a href='../../policy.html'>Policy</a></li></ul>						</li></ul>
 					</div>
 					<div>
 						<div style="padding-top:20px;width:100%;background: url('../../templates/eeloka/graypixel.gif') repeat-x 50% 20%;text-align: center;">
