--- a/ell/test_stars/index.html
+++ b/ell/test_stars/index.html
@@ -26,7 +26,7 @@
 
 
 	<!--<img src="assets/zillionoid_title.png" id="logo1" title="zillion stars" />
-  <a href="http://eeloka.ru"><img src="assets/eeloka_logo.png" id="logo2" title="eeloka" /></a>-->
+  <a href="https://eeloka.github.io"><img src="assets/eeloka_logo.png" id="logo2" title="eeloka" /></a>-->
 	
 	<input type="button" id="rnd" value="Сделать больше звезд" />
 	<div id="info">Info</div>
@@ -153,7 +153,7 @@
 										<div id="project-list">
 						<ul>
 						<li >
-						<a href="../../index.html">eeloka.ru</a>
+						<a href="../../index.html">eeloka</a>
 						<ul><li class=' '><a href='../../mine/index.html'>Майнинг</a></li><li class=' folder'><a href='../index.html'>cucumber's stuff</a><ul><li class=' '><a href='../typing_game.html'>Клавиатурный тренажер</a></li><li class=' '><a href='../mapgen/index.html'>Генератор карт</a></li><li class=' '><a href='../space/index.html'>Космическая игра 0.000001b</a></li><li class=' folder'><a href='../polygon/index.html'>Полигон</a></li><li class='active '><a href='index.html'>zillion stars</a></li></ul></li><li class=' folder'><a href='../../eu/index.html'>eu</a></li><li class=' folder'><a href='../../shared/index.html'>Shared</a></li><li class=' '><a href='../../policy.html'>Policy</a></li></ul>						</li></ul>
 					</div>
 					<div>
