--- a/eu/jedai_battles/work_notebook.html
+++ b/eu/jedai_battles/work_notebook.html
@@ -29,9 +29,9 @@ href="../../shared/svetliachki/index.html">Светлячковом</a> Горо
 
 <hr>
 
-<p>2 декабря 2013. Перечитывал весь сайт <a href="../../index.html" target=_blank>eeloka.ru</a>, кроме nro. Угнетатели кто? Капиталюги. И Ленин. Тоже! Не прощу ему голодную смерть Хармса. Никогда. Не прощу. Ленинцы, они же дебилы, ленинцы, они же угнетатели правили.
+<p>2 декабря 2013. Перечитывал весь сайт <a href="../../index.html" target=_blank>eeloka.github.io</a>, кроме nro. Угнетатели кто? Капиталюги. И Ленин. Тоже! Не прощу ему голодную смерть Хармса. Никогда. Не прощу. Ленинцы, они же дебилы, ленинцы, они же угнетатели правили.
 
-<p>По материалам <a href="work_notebook.html">http://eeloka.ru/eu/jedai_battles/work_notebook.html</a>.
+<p>По материалам <a href="work_notebook.html">https://eeloka.github.io/eu/jedai_battles/work_notebook.html</a>.
 
 <!-- EOF -->
 <!--0.00420-->
