--- a/eu/licenses_and_acknowledgements.html
+++ b/eu/licenses_and_acknowledgements.html
@@ -41,7 +41,7 @@ attribution share alike 	This file is licensed under the Creative Commons Attrib
 
 ------------------------------------------------
 
-http://eeloka.ru/eu/shchuka.jpg : фотография с сайта О.Боровика kudes.ru . 
+https://eeloka.github.io/eu/shchuka.jpg : фотография с сайта О.Боровика kudes.ru . 
 По-моему, она похожа на водяного дятла.
 
 А ваще-то — она водный тигр.
