--- a/eu/nro/sant-kirpal-singh-books.html
+++ b/eu/nro/sant-kirpal-singh-books.html
@@ -61,7 +61,7 @@
 										<div id="project-list">
 						<ul>
 						<li >
-						<a href="../../index.html">eeloka.ru</a>
+						<a href="../../index.html">eeloka</a>
 						<ul><li class=' '><a href='../../mine/index.html'>Майнинг</a></li><li class=' folder'><a href='../../ell/index.html'>cucumber's stuff</a></li><li class=' folder'><a href='../index.html'>eu</a><ul><li class=' folder'><a href='index.html'>Проект «Неистовый Радужный Огнь»</a><ul><li class=' '><a href='quintessences-kirpal-kabir.html'>Некоторые квинтэссенции Сант Кирпал Сингха и Кабира</a></li><li class='active '><a href='sant-kirpal-singh-books.html'>Книги Сант Кирпал Сингха</a></li></ul></li><li class=' '><a href='../predbannik.html'>(предбанник)</a></li><li class=' folder'><a href='../west_boundary_east/index.html'>Проект «West-Boundary-East»</a></li><li class=' '><a href='../gouslars/index.html'>Гусляры</a></li><li class=' '><a href='../rainbow_jungle/index.html'>+. радужные джунгли</a></li><li class=' folder'><a href='../jedai_battles/index.html'>Проэкт «Битвы Джэдаев»</a></li><li class=' '><a href='../eu.html'>Верстак eu</a></li><li class=' '><a href='../coderszone/index.html'>Зона кодеров</a></li></ul></li><li class=' folder'><a href='../../shared/index.html'>Shared</a></li><li class=' '><a href='../../policy.html'>Policy</a></li></ul>						</li></ul>
 					</div>
 					<div>
