--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ a.podlodka{text-decoration:underline}
 	<a href="ell/typing_game.html"><img src="ell/typing_game/files/images/logos/davilka_logo_wo_title.png" height="64" width="64" style='vertical-align:middle; margin: 10px;' alt='Давилка'/><br>
 	Да<span style="color:green">в</span>илка 0.06b</a> 
 	<br/><br>
-	<a href="http://eeloka.ru/ell/space.html">Космическая игра 0.000001b</a>
+	<a href="/ell/space.html">Космическая игра 0.000001b</a>
   <br><br>
   <a href="http://151.236.29.143/space.html">Космическая игра сетевая 0.000002b</a>
   <br><br>
@@ -60,7 +60,7 @@ a.podlodka{text-decoration:underline}
 
 	<a href="shared/pages/philosophy_2013_05_31.html">Философия</a><br>
 	<a href="shared/pages/philosophy2.html">Ещё философия</a><br>
-	<a href="shared/domains">Хитрая ссылка</a><br>
+	<a href="shared/domains.html">Хитрая ссылка</a><br>
 
 	<br>
 
@@ -89,7 +89,7 @@ a.podlodka{text-decoration:underline}
 										<div id="project-list">
 						<ul>
 						<li class='active'>
-						<a href="index.html">eeloka.ru</a>
+						<a href="index.html">eeloka</a>
 						<ul><li class=' '><a href='mine/index.html'>Майнинг</a></li><li class=' folder'><a href='ell/index.html'>cucumber's stuff</a></li><li class=' folder'><a href='eu/index.html'>eu</a></li><li class=' folder'><a href='shared/index.html'>Shared</a></li><li class=' '><a href='policy.html'>Policy</a></li></ul>						</li></ul>
 					</div>
 					<div>
