--- a/policy.html
+++ b/policy.html
@@ -26,7 +26,7 @@
 										<div id="project-list">
 						<ul>
 						<li >
-						<a href="index.html">eeloka.ru</a>
+						<a href="index.html">eeloka</a>
 						<ul><li class=' '><a href='mine/index.html'>Майнинг</a></li><li class=' folder'><a href='ell/index.html'>cucumber's stuff</a></li><li class=' folder'><a href='eu/index.html'>eu</a></li><li class=' folder'><a href='shared/index.html'>Shared</a></li><li class='active '><a href='policy.html'>Policy</a></li></ul>						</li></ul>
 					</div>
 					<div>
