--- a/ell/space/index.html
+++ b/ell/space/index.html
@@ -200,7 +200,7 @@ window.onload = function()
 										<div id="project-list">
 						<ul>
 						<li >
-						<a href="../../index.html">eeloka.ru</a>
+						<a href="../../index.html">eeloka</a>
 						<ul><li class=' '><a href='../../mine/index.html'>Майнинг</a></li><li class=' folder'><a href='../index.html'>cucumber's stuff</a><ul><li class=' '><a href='../typing_game.html'>Клавиатурный тренажер</a></li><li class=' '><a href='../mapgen/index.html'>Генератор карт</a></li><li class='active '><a href='index.html'>Космическая игра 0.000001b</a></li><li class=' folder'><a href='../polygon/index.html'>Полигон</a></li><li class=' '><a href='../test_stars/index.html'>zillion stars</a></li></ul></li><li class=' folder'><a href='../../eu/index.html'>eu</a></li><li class=' folder'><a href='../../shared/index.html'>Shared</a></li><li class=' '><a href='../../policy.html'>Policy</a></li></ul>						</li></ul>
 					</div>
 					<div>
