--- a/eu/jedai_battles/index.html
+++ b/eu/jedai_battles/index.html
@@ -66,7 +66,7 @@ face="Ubuntu Bold,Arial Bold">2. ПОД</font></h1></font></b></center></td></tr
 										<div id="project-list">
 						<ul>
 						<li >
-						<a href="../../index.html">eeloka.ru</a>
+						<a href="../../index.html">eeloka</a>
 						<ul><li class=' '><a href='../../mine/index.html'>Майнинг</a></li><li class=' folder'><a href='../../ell/index.html'>cucumber's stuff</a></li><li class=' folder'><a href='../index.html'>eu</a><ul><li class=' folder'><a href='../nro/index.html'>Проект «Неистовый Радужный Огнь»</a></li><li class=' '><a href='../predbannik.html'>(предбанник)</a></li><li class=' folder'><a href='../west_boundary_east/index.html'>Проект «West-Boundary-East»</a></li><li class=' '><a href='../gouslars/index.html'>Гусляры</a></li><li class=' '><a href='../rainbow_jungle/index.html'>+. радужные джунгли</a></li><li class=' folder'><a href='index.html'>Проэкт «Битвы Джэдаев»</a><ul><li class='active '><a href='index.html'>Эпизод I: Красное на чёрном</a></li><li class=' '><a href='jedai_episodeII.html'>Эпизод II: Танцы на грани весны</a></li></ul></li><li class=' '><a href='../eu.html'>Верстак eu</a></li><li class=' '><a href='../coderszone/index.html'>Зона кодеров</a></li></ul></li><li class=' folder'><a href='../../shared/index.html'>Shared</a></li><li class=' '><a href='../../policy.html'>Policy</a></li></ul>						</li></ul>
 					</div>
 					<div>
