Fix audio Staruha mha

--- a/eu/eu.html
+++ b/eu/eu.html
@@ -152,7 +152,7 @@ style="color:white;"><u>Гиперпифагор Лингуанодон</u></spa
 <hr>
 <audio controls loop preload=auto autoplay>
   <source src="11-through_the_woods.ogg" type="audio/ogg">
-  <source src="11-through_the_woods.mp3" type="audio/mpeg">
+  <!-- <source src="11-through_the_woods.mp3" type="audio/mpeg"> -->
   Your browser doesn't support the HTML tag 'audio'.
 </audio><br>
 Audio by Staruha Mha
